# python-jproperties

./: .travis.yml  CONTRIBUTING.md  LICENSE  README.md  jproperties.py  setup.cfg  setup.py  test_main.py
jproperties/: __init__.py  properties.py
tests/: test_main.py
