[metadata]
name = jproperties
version = 0.1
description = Python library for Java .properties file parsing
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/translate/python-jproperties
download_url = https://github.com/translate/python-jproperties/tarball/master
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Internationalization
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Java Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:

[bdist_wheel]
universal = 1
